--- a/gestion/templates/gestion/password_reset_complete.html
+++ b/gestion/templates/gestion/password_reset_complete.html
@@ -1,18 +1,19 @@
-{% extends "base.html" %}
-{% load i18n %}
+{% extends 'gestion/base.html' %}
 
-{% block title %}{% trans "Réinitialisation terminée" %}{% endblock %}
+{% block title %}Mot de passe réinitialisé{% endblock %}
 
 {% block content %}
+<div class="container mt-5">
     <div class="row justify-content-center">
-        <div class="col-md-8">
-            <div class="alert alert-success" role="alert">
-                <h4 class="alert-heading">{% trans "Mot de passe changé avec succès !" %}</h4>
-                <p>{% trans "Votre mot de passe a été défini. Vous pouvez maintenant vous connecter." %}</p>
-            </div>
-            <div class="text-center mt-3">
-                <a href="{% url 'gestion:connexion' %}" class="btn btn-primary">{% trans "Se connecter" %}</a>
+        <div class="col-lg-6">
+            <div class="card shadow-sm text-center">
+                <div class="card-body p-5">
+                    <h2 class="card-title mb-4">Mot de passe réinitialisé !</h2>
+                    <p>Votre mot de passe a été défini avec succès. Vous pouvez maintenant vous connecter avec votre nouveau mot de passe.</p>
+                    <a href="{% url 'gestion:connexion' %}" class="btn btn-primary mt-3">Se connecter</a>
+                </div>
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
